--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -175,3 +175,72 @@ p {
   top: 1px;
   background-color: #cccccc;
 }
+
+
+.teamcolumns {
+  top: 48px;
+  right: 327px;
+  width: 1266px;
+  height: 483px;
+  display: flex;
+  position: absolute;
+  border-color: #cad436;
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 30px;
+  justify-content: flex-start;
+}
+.playactiontext {
+  top: -59px;
+  color: #1ba4e3;
+  right: 62px;
+  position: absolute;
+  font-size: 50px;
+  font-weight: 700;
+}
+.teamheaders {
+  flex: 0 0 auto;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.teamheaders-green {
+  color: green;
+  font-size: 50px;
+  align-self: flex-start;
+  text-align: left;
+  justify-content: center;
+}
+.teamheaders-red {
+  color: red;
+  font-size: 50px;
+  align-self: flex-start;
+  text-align: left;
+}
+.scorelisting {
+  left: 327px;
+  width: 1266px;
+  bottom: 63px;
+  height: 415px;
+  display: flex;
+  position: absolute;
+  align-items: flex-start;
+  border-color: #cad436;
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 30px;
+  flex-direction: column;
+  background-color: #0e1a27;
+}
+.timeremaining {
+  left: 349px;
+  color: rgb(255, 255, 255);
+  bottom: 18px;
+  position: absolute;
+  font-size: 40px;
+  align-self: flex-start;
+  font-style: normal;
+  font-weight: 700;
+}
