--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -185,18 +185,40 @@ p {
 
 
 .teamcolumns {
-  top: 48px;
-  right: 327px;
-  width: 1266px;
-  height: 483px;
-  display: flex;
   position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
   border-color: #cad436;
   border-style: solid;
   border-width: 10px;
   border-radius: 30px;
-  justify-content: flex-start;
 }
+
+.scorelisting {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-color: #cad436;
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 30px;
+  background-color: #0e1a27;
+}
+
 .playactiontext {
   top: -59px;
   color: #1ba4e3;
@@ -205,6 +227,17 @@ p {
   font-size: 50px;
   font-weight: 700;
 }
+
+.timeremaining {
+  top: 340px;
+  left: 0px;
+  color: white;
+
+  position: absolute;
+  font-size: 50px;
+  font-weight: 700;
+}
+
 .teamheaders {
   flex: 0 0 auto;
   width: 50%;
@@ -225,31 +258,6 @@ p {
   font-size: 50px;
   align-self: flex-start;
   text-align: left;
-}
-.scorelisting {
-  left: 327px;
-  width: 1266px;
-  bottom: 63px;
-  height: 415px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  border-color: #cad436;
-  border-style: solid;
-  border-width: 10px;
-  border-radius: 30px;
-  flex-direction: column;
-  background-color: #0e1a27;
-}
-.timeremaining {
-  left: 349px;
-  color: rgb(255, 255, 255);
-  bottom: 18px;
-  position: absolute;
-  font-size: 40px;
-  align-self: flex-start;
-  font-style: normal;
-  font-weight: 700;
 }
 
 .player-line{
