--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -281,5 +281,14 @@ p {
   font-size: 30px;
   text-align: left;
   vertical-align: top;
+}
 
+.blink {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
